--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,7 @@
     <meta http-equiv="”content-language”" content="en-us”" />
     <meta name="theme-color" content="#3448D7" />
 
-    <title>Sonic App - AMM &amp; DeFi Hub</title>
-    <meta property="og:title" content="Sonic App - AMM &amp; DeFi Hub" />
-    <meta name="twitter:title" content="Sonic App - AMM &amp; DeFi Hub" />
-
-    <link rel="canonical" href="https://app.sonic.ooo" />
-
-    <meta
-      name="description"
-      content="Sonic is a DeFI/AMM protocol on the Internet Computer leveraging the IC&#x27;s unlimited scalability to provide a collection of DeFI products, including swaps, liquidity, and more."
-    />
-    <meta
-      property="og:description"
-      content="Sonic is a DeFI/AMM protocol on the Internet Computer leveraging the IC&#x27;s unlimited scalability to provide a collection of DeFI products, including swaps, liquidity, and more."
-    />
-    <meta
-      name="twitter:description"
-      content="Sonic is a DeFI/AMM protocol on the Internet Computer leveraging the IC&#x27;s unlimited scalability to provide a collection of DeFI products, including swaps, liquidity, and more."
-    />
+    <title>Sonic-js Example</title>
 
     <meta
       property="og:image"
